sync theme with default stylesheet upstream; fix spacing to content

--- a/stylesheets/_awesome-icons.scss
+++ b/stylesheets/_awesome-icons.scss
@@ -45,7 +45,7 @@ span.icon > .fa {
   display: inline-block;
   color: #fff !important;
   background-color: $body-font-color;
-  @include border-radius(100px);
+  @include radius(100px);
   text-align: center;
   width: 1.67em;
   height: 1.67em;
